--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -13,6 +13,9 @@ Flask-Caching==1.10.1
 Flask-Mail==0.9.1
 itsdangerous==2.1.2
 python-dateutil==2.8.2
-schedule==1.1.0
+APScheduler==3.7.0
+
+
+ 
 
 
